# rorm-pp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: compiler.cmake
doc/development/: README.md  bloomber_clang_setup.md  coding_style.md  cpp_reflection.md
doc/development/arch/diagrams/: rorm_use_case_diagram.puml
doc/management/: goal.md  roadmap.md
doc/management/milestones/: 000_clang_with_reflection_setup.md  001_the_first_steps.md  002_simple_orm.md  clang_with_reflection_setup.md
rorm/include/rorm/: expand.h  rorm.h
test/: test_reflection.cc
tests/: CMakeLists.txt  expand.h  test_reflection.cc
